# m-dev

./: .gitignore  .sesskey  README.md  index.html  main.py  single_file.py  tags.html  test_docs.html  test_nb.py  write_docs.py
_site/: index.html
archive/: 05_cqrs.py  ARK_core.py
docs/: LICENSE.html  build.html  cli.html  core.html  docs.html  githubpages.html  index.html  license.html  llms-full.txt  llms.txt  pkg.html  publish.html  read.html  settings.html  stellar.css  style.css  styles.css
new/: __init__.py  core.py
notebooks/: 00_config.py  00_core.py  00_index.py  01_core.py  02_docs.py  02_dummy_module.py  02_ft_ds.py  02_read.py  03_coreRevision.py  03_docs.py  03_mkdocs.py  03_pkg.py  04_docs.py  04_dstest.py  05_build.py  06_cli.py  06_publish.py  99_refactor.py  XX_Roadmap.py  XX_backup_monolith.py  XX_core.py  XX_docs.py  XX_ft_ds.py  XX_revisecore.py  a_core.py  a_types.py  b_parse.py  b_read.py  c_build_pkg.py  c_pkg.py  core.py  d_build_docs.py  d_docs.py  (+13 more)
src/: README.md  core.py  m_dev.py  new.py.bak  pyproject.toml
src/m_dev/: __init__.py  build.py  core.py  core.py.bak  docs.py  docs.py.bak  dummy_module.py  new.py  new.py.bak
src/marimo_dev/: __init__.py  __main__.py  b_read.py  build.py  build_docs.py  build_docs_html.py  build_pkg.py  c_pkg.py  cli.py  core.py  d_docs.py  docs.py  e_build.py  f_publish.py  g_cli.py  parse.py  pkg.py  publish.py  read.py  types.py
src/mdev/: XX_ft_ds.py  __init__.py  aoc.py  core.py  ft_ds.py  mkdocs.py
src/mdev_test/: __init__.py  core.py  docs.py  test_nb.py
src/your_marimo_lib/: _metadata.py
(+54 files in other folders)
