[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
readme = "README.md"
name = "m-dev"
version = "0.0.4"
description = "Build and publish python packages from marimo notebooks"
authors = [
    {name = "Deufel", email = "MDeufel13@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = []
