[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
name = "m-dev"
version = "0.0.1"
description = "Build and publish python packages from marimo notebooks"
authors = [
    {name = "Deufel", email = "MDeufel13@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = []
